fix: z-index scrollbar -> now behind panels

--- a/src/less/scroll-bonaparte.less
+++ b/src/less/scroll-bonaparte.less
@@ -41,7 +41,7 @@ scroll-bonaparte > .scrollbar {
   top:0;
   bottom:0;
   opacity: .01;
-  z-index:999;
+  z-index:0;
   transition: .2s;
   border-radius: 5px;
 
